<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_apps">DG\'s Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app_name">Spotify Streamer</string>
    <string name="capstone_app">Capstone: My Own App</string>
    <string name="xyz_app">XYZ Reader</string>
    <string name="build_bigger_app">Build it Bigger</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">Scores App</string>
</resources>
