<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/my_apps"
            android:textSize="@dimen/abc_text_size_large_material" />

        <Button
            android:id="@+id/spotify_button"
            style="@style/PortfolioTheme.Button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/spotify_app_name" />

        <Button
            android:id="@+id/scores_button"
            style="@style/PortfolioTheme.Button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/library_button"
            style="@style/PortfolioTheme.Button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/build_bigger_button"
            style="@style/PortfolioTheme.Button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/build_bigger_app" />

        <Button
            android:id="@+id/xyz_button"
            style="@style/PortfolioTheme.Button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/xyz_app" />

        <Button
            android:id="@+id/capstone_button"
            style="@style/PortfolioTheme.Button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/capstone_app" />

    </LinearLayout>
</ScrollView>